[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groovelink"
version = "0.1.0"
description = "A resilient API client with circuit breaker, retry, rate limiting, and health checks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "responses>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
groovelink = "groovelink.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
